--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,63 +7,73 @@
   android:padding="16dp"
   tools:context=".MainActivity">
 
-  <TextView
-    android:id="@+id/tv_book_code"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/kode_buku"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
-  <EditText
-    android:id="@+id/et_book_code"
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/met_book_code"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     app:layout_constraintEnd_toEndOf="parent"
+    style="mater"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/tv_book_code" />
+    app:layout_constraintTop_toTopOf="parent">
 
-  <TextView
-    android:id="@+id/tv_title"
-    android:layout_width="wrap_content"
+    <EditText
+      android:id="@+id/et_book_code"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="@string/kode_buku"
+      android:inputType="textCapSentences"
+      android:maxLines="1" />
+
+  </com.google.android.material.textfield.TextInputLayout>
+
+
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/met_title"
+    android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:text="@string/judul_buku"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/et_book_code" />
+    app:layout_constraintEnd_toEndOf="@id/met_book_code"
+    app:layout_constraintStart_toStartOf="@+id/met_book_code"
+    app:layout_constraintTop_toBottomOf="@+id/met_book_code">
 
-  <EditText
-    android:id="@+id/et_title"
+    <EditText
+      android:id="@+id/et_title"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="@string/judul_buku"
+      android:inputType="textCapSentences"
+      android:maxLines="1" />
+
+  </com.google.android.material.textfield.TextInputLayout>
+
+  <com.google.android.material.textfield.TextInputLayout
+    android:id="@+id/met_author"
     android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/tv_title" />
-
-  <TextView
-    android:id="@+id/tv_author"
-    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
-    android:text="@string/pengarang"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/et_title" />
+    app:layout_constraintEnd_toEndOf="@id/met_title"
+    app:layout_constraintStart_toStartOf="@+id/met_title"
+    app:layout_constraintTop_toBottomOf="@+id/met_title">
 
-  <EditText
-    android:id="@+id/et_author"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/tv_author" />
+    <EditText
+      android:id="@+id/et_author"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:hint="@string/pengarang"
+      android:inputType="textCapSentences"
+      android:maxLines="1" />
+
+  </com.google.android.material.textfield.TextInputLayout>
 
   <Button
-    android:layout_width="0dp"
+    android:id="@+id/btn_submit"
+    style="@style/Base.Widget.AppCompat.Button.Colored"
+    android:layout_width="409dp"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
+    android:layout_marginTop="32dp"
     android:text="@string/input_data"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/et_author" />
+    app:layout_constraintEnd_toEndOf="@id/met_author"
+    app:layout_constraintStart_toStartOf="@id/met_author"
+    app:layout_constraintTop_toBottomOf="@id/met_author" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
